--- a/.travis.yml
+++ b/.travis.yml
@@ -27,15 +27,19 @@ python:
   - "2.6"
   - "2.7"
   - "3.3"
+  - "3.4"
 
 install:
   - npm install -g bower
   - pip install --upgrade pip  --use-mirrors
-  - pip install coveralls --use-mirrors
+  - pip install coveralls pep8 pep257 sphinx --use-mirrors
   - pip install .
 
 script:
+  - sphinx-build -qnNW docs docs/_build/html
   - coverage run setup.py test
+  - pep8 --ignore=E265 setuptools_bower
+  - pep257 setuptools_bower
 
 after_success:
   - coveralls
