--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 # -*- coding: utf-8 -*-
 ##
 ## This file is part of setuptools-bower
-## Copyright (C) 2013 CERN.
+## Copyright (C) 2013, 2014 CERN.
 ##
 ## setuptools-bower is free software; you can redistribute it and/or
 ## modify it under the terms of the GNU General Public License as
@@ -22,7 +22,7 @@
 ## or submit itself to any jurisdiction.
 
 [tox]
-envlist = py26, py27, py33, docs
+envlist = py26, py27, py33, py34, docs
 
 [testenv]
 commands = {envpython} setup.py test
