--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,7 @@
 # -*- coding: utf-8 -*-
 ##
 ## This file is part of setuptools-bower
-## Copyright (C) 2013 CERN.
+## Copyright (C) 2013, 2014 CERN.
 ##
 ## setuptools-bower is free software; you can redistribute it and/or
 ## modify it under the terms of the GNU General Public License as
@@ -22,7 +22,7 @@
 ## or submit itself to any jurisdiction.
 
 include COPYING AUTHORS CHANGES README.rst
-include .coveragerc run-coverage.sh
+include .coveragerc run-tests.sh
 include docs/*.rst docs/*.py docs/Makefile
 include tests/*.py
 recursive-include docs/_themes *.py *.css *.css_t *.conf *.html README
